Prevent data label hiding when the label is too long.
Just wrap it onto a next line

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -309,6 +309,7 @@ ul.selectable-list {
   .label {
     font-size: 22px;
     line-height: 22px;
+    white-space: normal;
 
     font-weight: bold;
     text-shadow: 1px 1px 1px #330, -1px -1px 1px #330;
